--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Site</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
-    <div class="background-color">
+<div class="background-color-container">
+    <div class="container-element">
         <header class="container">
             <div class="container__navigation--hover">
                 <nav class="nav-menu">
@@ -38,6 +39,7 @@
             <input type="button" name="name" id="button" value="Write to me" class="call-to-action">
         </form>
     </div>
+</div>
 
     <section class="section">
         <header class="section__container">
@@ -48,56 +50,68 @@
     </section>
 
     <div class="background-color-footer">
-        <footer class="footer" style="margin-left: 35px;">
+        <footer class="footer">
             <ul class="list-footer">
                 <li class="list-footer__item">
                     <img src="./images/project.png">
                 </li>
                 <header class="footer-header">
-                    <h3>40+</h3>
-                    <p class="footer__content">projects</p>
+                    <div class="geometry-content">
+                        <h3>40+</h3>
+                        <p class="footer__content">projects</p>
+                    </div>
                 </header>
                 <li class="list-footer__item">
                     <img src="./images/project.png">
                 </li>
                 <header class="footer-header">
-                    <h3>40+</h3>
-                    <p class="footer__content">projects</p>
+                    <div class="geometry-content">
+                        <h3>40+</h3>
+                        <p class="footer__content">projects</p>
+                    </div>
                 </header>
                 <li class="list-footer__item">
                     <img src="./images/project.png">
                 </li>
                 <header class="footer-header">
-                    <h3>40+</h3>
-                    <p class="footer__content">projects</p>
+                    <div class="geometry-content">
+                        <h3>40+</h3>
+                        <p class="footer__content">projects</p>
+                    </div>
                 </header>
                 <li class="list-footer__item">
                     <img src="./images/project.png">
                 </li>
                 <header class="footer-header">
-                    <h3>40+</h3>
-                    <p class="footer__content">projects</p>
+                    <div class="geometry-content">
+                        <h3>40+</h3>
+                        <p class="footer__content">projects</p>
+                    </div>
                 </header>
                 <li class="list-footer__item">
                     <img src="./images/project.png">
                 </li>
                 <header class="footer-header">
-                    <h3>40+</h3>
-                    <p class="footer__content">projects</p>
+                    <div class="geometry-content">
+                        <h3>40+</h3>
+                        <p class="footer__content">projects</p>
+                    </div>
                 </header>
                 <li class="list-footer__item">
                     <img src="./images/project.png">
                 </li>
                 <header class="footer-header">
-                    <h3>40+</h3>
-                    <p class="footer__content">projects</p>
+                    <div class="geometry-content">
+                        <h3>40+</h3>
+                        <p class="footer__content">projects</p>
+                    </div>
                 </header>
             </ul>
         </footer>
     </div>
 
 <div class="container-background">
-    <section class="section">
+    <section class="section-work">
         <header class="section__container">
             <h2 class="header__title">How I Work</h2>
             <p class="section__content">Lorem Ipsum is a placeholder text commonly used in printing and web design.
@@ -110,12 +124,14 @@
     </div>
 </div>
 
-<footer class="footer-container">
-    <header class="header-content">
-        <h3 class="header-content__name">Ostap Ivanenko</h3>
-        <div class="header-content__rights">© 2018. All rights reserved.</div>        
-    </header>    
-</footer>
+<div class="footer-geometry">
+    <footer class="footer-container">
+        <header class="header-content">
+            <h3 class="header-content__name footer-color">Ostap Ivanenko</h3>
+            <div class="header-content__rights footer-color">© 2018. All rights reserved.</div>        
+        </header>    
+    </footer>
+</div>
 </body>
 
 </html>
